<resources>
    <string name="app_name">HuMate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="matching_title">동행 목록</string>
    <string name="status_ongoing">진행중</string>
    <string name="status_completed">완료</string>
    <string name="mission_finished">완료된 활동</string>
    <string name="mission_new">새로운 활동</string>
    <string name="mission_notice">메이트와 함께 새로운 활동을 경험해보세요</string>
    <string name="mission_pending">대기</string>
    <string name="mission_completed_title">완료된 활동 상세</string>
    <string name="mission_new_title">새로운 활동 상세</string>
    <string name="mission_record">기록하기</string>
    <string name="mission_upload_title">활동 업로드</string>
    <string name="upload_photo">사진 첨부</string>
    <string name="companion_finish">동행 종료하기</string>
    <string name="review_write">후기 남기기</string>
    <string name="submit">제출하기</string>
    <string name="review_notice">후기를 작성해주세요</string>
    <string name="matching_nickname">%1$s님과의 매칭은 어떠셨나요?</string>
    <string name="nav_mate">메이트</string>
    <string name="nav_chat">채팅</string>
    <string name="nav_mission">활동</string>
    <string name="nav_mypage">마이페이지</string>
    <string name="review_success">후기 작성에 성공했습니다</string>
    <string name="review_failed">후기 작성에 실패했습니다</string>
    <string name="companion_finished_success">동행이 종료되었습니다</string>
    <string name="companion_finished_failed">동행을 종료하지 못했습니다</string>
    <string name="upload_success">활동 등록이 완료됐습니다</string>
    <string name="upload_failed">활동 등록에 실패했습니다</string>

    <!-- MATE 도메인 -->
    <string name="done">확인</string>
    <string name="title">제목</string>
    <string name="content">내용</string>
    <string name="date">날짜</string>
    <string name="location">장소</string>
    <string name="gender">성별</string>
    <string name="language">언어</string>
    <string name="closed">마감</string>

    <string name="list">매칭글 목록</string>
    <string name="list_filter">필터</string>
    <string name="write_ballon">맞춤형 메이트를 구하기 위한 매칭글을 작성해보세요!</string>

    <string name="write">매칭글 작성</string>
    <string name="write_option">매칭 정보 선택</string>
    <string name="write_select">선택</string>
    <string name="write_store">매장 및 팝업스토어 선택</string>
    <string name="write_tag">태그 선택</string>
    <string name="shopping">쇼핑</string>
    <string name="meal">식사</string>
    <string name="event">행사</string>
    <string name="post">등록</string>
    <string name="add_store">추가</string>
    <string name="write_completed">매칭글 작성이 완료되었습니다.</string>

    <string name="filter">필터 설정</string>
    <string name="filter_date">매칭 날짜 선택</string>
    <string name="filter_branch">백화점 지점 선택</string>
    <string name="filter_gender">매칭 성별 선택</string>
    <string name="filter_language">매칭 언어 선택</string>
    <string name="reset">초기화</string>
    <string name="male">남성</string>
    <string name="female">여성</string>
    <string name="korean">한국어</string>
    <string name="english">영어</string>
    <string name="japanese">일본어</string>
    <string name="chinese">중국어</string>

    <string name="detail">매칭글 정보</string>
    <string name="remark">한마디</string>
    <string name="detail_store">매장 및 팝업스토어</string>
    <string name="store">매장</string>
    <string name="pop_up">팝업스토어</string>
    <string name="enter_name_message">이름을 입력해주세요.</string>
    <string name="apply_mate">메이트 신청하기</string>

    <string name="write_detail">매칭 정보 선택</string>
    <string name="select_date">날짜를 선택해주세요</string>
    <string name="same_gender">나와 같은 성별</string>
    <string name="same_gender_detail">동성 메이트를 원해요!</string>
    <string name="both_gender">상관 없음</string>
    <string name="both_gender_detail">동성, 이성 모두 상관없어요!</string>

    <string name="mypage_title">마이페이지</string>
    <string name="mypage_loading">로딩중..</string>
    <string name="mypage_mymanner">나의 온도</string>
    <string name="mypage_my_mates">내 메이트 목록</string>
    <string name="mypage_my_posts">글 작성 내역</string>
    <string name="mypage_my_points">내 포인트</string>
    <string name="mypage_logout">로그아웃</string>
    <string name="mypage_profile_title">내 정보</string>
    <string name="mypage_profile_nickname">닉네임</string>
    <string name="mypage_profile_introduction">한 줄 소개</string>
    <string name="mypage_profile_check_dup">중복확인</string>
    <string name="mypage_profile_profile_img">프로필 이미지</string>
    <string name="mypage_profile_edit">수정하기</string>
    <string name="member_item_mate_age">나이  |</string>
    <string name="member_item_mate_gender">성별  |</string>
    <string name="member_item_mate_temperature">메이트 온도  |</string>
    <string name="member_mymate_title">내 메이트</string>
    <string name="member_mymate_gender_male">남자</string>
    <string name="member_mymate_gender_female">여자</string>
    <string name="member_mymate_postage">세</string>
    <string name="toast_member_logout_success">로그아웃 성공</string>
    <string name="toast_fail_server_connection">서버와 연결되지 않았습니다</string>
    <string name="toast_please_one_more_time">다시 한 번 시도해주세요</string>
    <string name="toast_image_size_over">이미지 크기는 50MB보다 작아야 합니다</string>
    <string name="mypage_profile_different_nickname">기존과 다른 닉네임으로 변경해주세요</string>
    <string name="mypage_profile_two_letter_nickname">두 글자 이상의 닉네임을 입력해주세요</string>
    <string name="mypage_profile_available_nickname">사용 가능한 닉네임입니다</string>
    <string name="mypage_profile_already_in_use_nickname">이미 사용중인 닉네임입니다</string>
    <string name="mypage_profile_duplication_check_needed">닉네임 중복 확인이 필요합니다</string>
    <string name="toast_mypage_profile_edit_success">수정 성공</string>
    <string name="toast_mypage_profile_edit_fail">수정 실패</string>
    <string name="signup_id_five_letter">다섯 글자 이상의 아이디를 입력해주세요</string>
    <string name="signup_available_id">사용 가능한 아이디입니다</string>
    <string name="signup_id_already_in_use">이미 사용중인 아이디입니다</string>
    <string name="signup_id_duplication_check_needed">아이디 중복 확인이 필요합니다</string>
    <string name="signup_password_not_match">비밀번호가 일치하지 않습니다</string>
    <string name="signup_password_letter_size">8~20글자 비밀번호를 입력해주세요</string>
    <string name="signup_password_constraints">비밀번호는 영문자, 숫자, 특수문자 중 2가지 이상을 포함해야 합니다</string>
    <string name="toast_signup_success_signup">회원가입 성공</string>
    <string name="toast_signin_success">로그인 성공</string>
    <string name="signup_input_profile_title">프로필 작성</string>
    <string name="signup_done">완료</string>
    <string name="signin_title">로그인</string>
    <string name="signin_signup">회원가입</string>
    <string name="signup_id">아이디</string>
    <string name="signup_password">비밀번호</string>
    <string name="signup_password_guide">영문자, 숫자, 특수문자 중 2가지 이상을 조합하여\n8~20자로 입력해주세요</string>
    <string name="signup_confirm_password">비밀번호 확인</string>
    <string name="signup_next">다음</string>
    <string name="mypage_profile_nickname_lower">닉네임</string>
    <string name="mypage_profile_introduction_lower">한 줄 소개</string>
    <string name="signup_password_lower">비밀번호</string>


    <string name="chat_mate_list">메이트 채팅</string>
    <string name="chat_pending_list">" 대기"</string>
    <string name="review_score_failed">평가를 남겨주세요</string>
    <string name="toast_signup_invalid_id_password">아이디나 비밀번호를 확인해주세요</string>


    <string name="splash">글로벌 메이트와 함께하는\n특별한 현대백화점 추억 만들기</string>

    <string name="chat_mate_active_message">님이 메이트 신청을 했습니다.</string>
    <string name="chat_mate_inactive_message">님이 메이트 신청을 취소했습니다.</string>
    <string name="chat_default_message"></string>
    <string name="chat_dialog_title_mate_apply">메이트 맺기</string>
    <string name="chat_dialog_title_mate_cancel">메이트 취소</string>
    <string name="chat_dialog_content_mate_apply">메이트를 맺으면 함께 동행하여 \n다양한 활동을 수행할 수 있습니다.</string>
    <string name="chat_dialog_content_mate_cancel">메이트를 취소하면 해당 메이트와는 \n함께할 수 없게 됩니다.</string>
    <string name="chat_dialog_confirmed">메이트 활동 시작하기</string>
    <string name="chat_dialog_confirmed_content">메이트 맺기에 성공하여 함께 활동을 \n수행할 수 있습니다</string>
    <string name="chat_dialog_confirm_button">확인</string>
    <string name="chat_dialog_cancel_button">취소</string>
    <string name="chat_notice">메이트와 함께한 활동 내역을 확인해보세요.\n 우리의 특별한 순간들이 담겨 있어요. 지금 바로 보러가기!</string>

</resources>