<?xml version="1.0" encoding="utf-8"?>

<!--
 * 회원가입 시 로그인 아이디, 비밀번호 입력 Layout
 * @author 조영욱
 * @since 2024.08.02
 * @version 1.0
 *
 * <pre>
 * 수정일        	수정자        수정내용
 * ==========  =========    =========
 * 2024.08.02  	조영욱        최초 생성
 * 2024.08.08  	조영욱        파일 명 변경: auth_ 추가
 * </pre>
 -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleKoreanSignUp"

        android:layout_width="309dp"
        android:layout_height="83dp"
        android:layout_marginTop="50dp"

        android:gravity="center"
        android:text="@string/signin_signup"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/guideInputId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/signup_id"
        android:textColor="@color/dark_gray"
        android:textSize="15sp"
        android:maxLength="20"
        app:layout_constraintStart_toStartOf="@+id/innerLayout"
        app:layout_constraintTop_toBottomOf="@+id/titleKoreanSignUp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/innerLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideInputId">

        <EditText
            android:id="@+id/inputLoginId"

            android:layout_width="220dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"

            android:background="@drawable/auth_light_gray_border"

            android:gravity="left|center_vertical"
            android:hint="@string/signup_id"
            android:inputType="text"
            android:maxLength="20"

            android:paddingStart="17dp"
            android:textColorHint="@color/light_gray"
            android:textSize="14sp"

            app:layout_constraintEnd_toStartOf="@+id/checkIdButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <android.widget.Button
            android:id="@+id/checkIdButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="6dp"
            android:textAllCaps="false"

            android:background="@drawable/auth_main_large_button"
            android:text="@string/mypage_profile_check_dup"
            android:textColor="@color/white"
            android:textSize="14sp"

            app:layout_constraintStart_toEndOf="@+id/inputLoginId"
            app:layout_constraintTop_toTopOf="@+id/inputLoginId"
            app:layout_constraintBottom_toBottomOf="@+id/inputLoginId"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/guideCheckId"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:text=""
        android:textColor="@color/smooth_blue"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@+id/innerLayout"
        app:layout_constraintTop_toBottomOf="@+id/innerLayout" />

    <TextView
        android:id="@+id/guideInputPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/signup_password"
        android:textColor="@color/dark_gray"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/innerLayout"
        app:layout_constraintTop_toBottomOf="@+id/innerLayout" />

    <EditText
        android:id="@+id/inputPassword"

        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"

        android:background="@drawable/auth_light_gray_border"

        android:gravity="left|center_vertical"
        android:hint="@string/signup_password_lower"
        android:inputType="textPassword"
        android:paddingStart="17dp"
        android:textColorHint="@color/light_gray"
        android:textSize="14sp"
        android:maxLength="20"

        app:layout_constraintStart_toStartOf="@+id/innerLayout"
        app:layout_constraintTop_toBottomOf="@+id/guideInputPassword"/>

    <EditText
        android:id="@+id/inputPasswordConfirm"

        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="6dp"

        android:background="@drawable/auth_light_gray_border"

        android:gravity="left|center_vertical"
        android:hint="@string/signup_confirm_password"
        android:inputType="textPassword"
        android:paddingStart="17dp"
        android:textColorHint="@color/light_gray"
        android:textSize="14sp"
        android:maxLength="20"

        app:layout_constraintStart_toStartOf="@+id/innerLayout"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword"/>

    <TextView
        android:id="@+id/guidePasswordConstraint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/signup_password_guide"
        android:textColor="@color/smooth_red"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@+id/innerLayout"
        app:layout_constraintTop_toBottomOf="@+id/inputPasswordConfirm" />

    <android.widget.Button
        android:id="@+id/nextButton"

        android:layout_width="300dp"
        android:layout_height="50dp"

        android:layout_marginBottom="35dp"

        android:background="@drawable/auth_main_large_button"
        android:gravity="center"
        android:text="@string/signup_next"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textAllCaps="false"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>