<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/member_mate_dialog_background"
    android:padding="15dp"
    android:clipToOutline="false">


    <LinearLayout
            android:id="@+id/ageLayout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <TextView
                android:id="@+id/guideAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:text="@string/chat_dialog_title_mate_apply"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:padding="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:id="@+id/ageText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/chat_dialog_content_mate_apply"
                android:textSize="13sp"
                android:textColor="@color/dark_gray"/>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:orientation="horizontal"
                android:gravity="end|center_vertical">

            <android.widget.Button
                    android:id="@+id/dialog_cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chat_dialog_cancel_button"
                    android:textSize="13sp"
                    android:textColor="@color/chat_dialog_button_text"
                    android:background="@drawable/chat_dialog_button_background" />

            <android.widget.Button
                    android:id="@+id/dialog_confirm_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chat_dialog_confirm_button"
                    android:textSize="13sp"
                    android:textColor="@color/chat_dialog_button_text"
                    android:background="@drawable/chat_dialog_button_background" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>